--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -17,7 +17,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/menu_icon">
+            >
 
             <RelativeLayout
                 android:id="@+id/walletLay"
@@ -26,12 +26,21 @@
                 android:layout_gravity="start|center_vertical"
                 android:layout_marginEnd="6dp">
 
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/menu_"
+                    android:layout_width="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/menu_icon" />
                 <TextView
                     android:id="@+id/appName"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_bold"
+                    android:layout_toEndOf="@+id/menu_"
                     android:text="@string/app_name"
+                    android:paddingStart="@dimen/x10"
                     android:textAlignment="textStart"
                     android:textColor="#0f1b49"
                     android:textSize="@dimen/s20"
@@ -193,6 +202,19 @@
                                 android:background="@drawable/bg_story"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/w_viewAll"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/montserrat_bold"
+                                android:padding="@dimen/x6"
+                                android:paddingEnd="@dimen/x6"
+                                android:text="@string/view_all"
+                                android:textColor="#09b84b"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                tools:ignore="RtlSymmetry" />
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/wStatusRv"
@@ -466,6 +488,19 @@
                             android:textSize="11sp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/wallpaper_viewAll"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat_bold"
+                            android:padding="@dimen/x6"
+                            android:paddingEnd="@dimen/x6"
+                            android:text="@string/view_all"
+                            android:textColor="#09b84b"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:ignore="RtlSymmetry" />
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/trend_rv"
