--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="third_color">#ffb954</color>
     <color name="text_3">#151435</color>
     <color name="gnt_black">#000000</color>
+    <color name="gnt_gray">#808080</color>
+    <color name="colorAccent">#ffb954</color>
+    <color name="colorPrimary">#ffb954</color>
 </resources>
